fix(explorer): Fix search dropdown too long (#1930)

--- a/src/features/content-explorer/content-explorer/ContentExplorer.scss
+++ b/src/features/content-explorer/content-explorer/ContentExplorer.scss
@@ -6,6 +6,10 @@
         align-items: center;
         height: 38px;
         margin-top: 20px;
+
+        .quick-search .overlay {
+            max-height: 345px;
+        }
     }
 
     .content-explorer-search-container {
